tests/ui/pattern/usefulness/stable-gated-patterns.stderr
error[E0004]: match is non-exhaustive
  --> $DIR/stable-gated-patterns.rs:8:11
   |
LL |     match UnstableEnum::Stable {
   |           ^^^^^^^^^^^^^^^^^^^^ patterns `UnstableEnum::Stable2` and `_` not covered
   |
   = note: the matched value is of type `UnstableEnum`
help: ensure that all possible cases are being handled by adding more match arms
   |
LL ~         UnstableEnum::Stable => {},
LL +         UnstableEnum::Stable2 => { todo!() },
LL +         _ => { todo!() },
   |

error[E0004]: match is non-exhaustive
  --> $DIR/stable-gated-patterns.rs:13:11
   |
LL |     match UnstableEnum::Stable {
   |           ^^^^^^^^^^^^^^^^^^^^ pattern `_` not covered
   |
   = note: the matched value is of type `UnstableEnum`
help: ensure that all possible cases are being handled by adding a wildcard arm
   |
LL ~         UnstableEnum::Stable2 => {}
LL +         _ => { todo!() },
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0004`.
